--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <!-- <div></div> -->
+    <div class="wrap-btn"><button type="button" id="left" class="btn">&#8656;</button>
+        <button type="button" id="up" class="btn">&#8657;</button>
+        <button type="button" id="right" class="btn">&#8658;</button>
+        <button type="button" id="down" class="btn">&#8659;</button>
+        <button type="button" id="space" class="btn">&#9674;</button>
+    </div>
     <!-- <div>&#10057;</div>
     <div>&#10054;</div>
     <div>&#10053;</div>
     <div>&#10054;</div> -->
     <script src="main.js"></script>
+    <script src="checkPltf.js"></script>
     <script src="main1.js"></script>
     <script src="main2.js"></script>
     <script src="main3.js"></script>
