add for mob btn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <div class="wrap-btn"><button type="button" id="left" class="btn">&#8656;</button>
+    <div class="wrap-btn" id="btns"><button type="button" id="left" class="btn">&#8656;</button>
         <button type="button" id="up" class="btn">&#8657;</button>
         <button type="button" id="right" class="btn">&#8658;</button>
         <button type="button" id="down" class="btn">&#8659;</button>
@@ -21,7 +21,7 @@
     <div>&#10053;</div>
     <div>&#10054;</div> -->
     <script src="main.js"></script>
-    <script src="checkPltf.js"></script>
+    <script src="mob.js"></script>
     <script src="main1.js"></script>
     <script src="main2.js"></script>
     <script src="main3.js"></script>
